--- a/index.html
+++ b/index.html
@@ -17,10 +17,25 @@
 			color: #e0e0e0;
 
 		}
+		#title {
+			position: absolute;
+			bottom: 10px;
+			left: 10px;
+			font-weight: bold;
+			font-size: 48px;
+		}
+		a {
+			color: #808080;
+			text-decoration: none;
+		}
+		a:hover {
+			color: #00cCF0;
+		}
 	</style> 
 </head>
 <body>
 	<canvas id="main"></canvas>
 	<div id="fps">xxx</div>
+	<div id="title"><a href="">QUADTREE</a></div>
 	<script src="main.js"></script>
 </html>
