add info pane and title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset='UTF-8'/>
-	<title>:D</title> 
+	<title>Bobby Roe - Quadtree</title> 
 	<link rel="stylesheet" href="style/style.css">
 	
 </head>
@@ -17,10 +17,12 @@
 		<br>
 		move the mouse around to highlight 'local' points<br>
 		<br>
-		<a href="http://en.wikipedia.org/wiki/Quadtree" target="_blank">wikipedia</a>
+		See the <a href="https://github.com/bobbyroe/Quadtree">source on github</a><br>
+		<br>
+		Read more about <a href="http://en.wikipedia.org/wiki/Quadtree" target="_blank">Quadtrees on wikipedia</a>
 		<div id="nub">info</div>
 	</div>
 	<div id="fps">xxx</div>
-	<div id="title"><a href="https://github.com/bobbyroe/Quadtree">QUADTREE</a></div>
+	<div id="title">QUADTREE</div>
 	<script src="main.js"></script>
 </html>
